# perception

./: CMakeLists.txt  main.py  package.xml
assets/config/: camera.json  client.json  laser.json  model.json  record.json
assets/config/source/: depth-camera.json
include/common/: buffer.hpp  client.hpp  common.h  image_conversion.hpp  threadpool.h
include/model/: engine.hpp
include/model/base/: base.hpp  type.hpp
include/model/bytetrack/: BYTETracker.h  STrack.h  dataType.h  kalmanFilter.h  lapjv.h
include/model/stereonet/: stereonet.h
include/model/yolo/: yolo.h
include/node/: CameraNode.h  NodeType.h  PerceptionNode.h  node.h
include/task/: base.hpp  followme.h  obstacle.h  recognize.h  record.h
install/: autoupdate.service  autoupdate.sh  perception.service  perception.sh  stereo-camera.service  stereo-camera.sh
launch/: launch.py
scripts/: autoupdate.py  camera.py  client.py  display.py
src/: main.cpp
src/model/bytetrack/: BYTETracker.cpp  STrack.cpp  kalmanFilter.cpp  lapjv.cpp  utils.cpp
src/model/stereonet/: stereonet.cpp
src/model/yolo/: yolo.cpp
src/node/: CameraNode.cpp  CameraNodeConfig.cpp  CameraNodeWorker.cpp  node.cpp
src/task/: followme.cpp  obstacle.cpp  recognize.cpp  record.cpp
