<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>perception</name>
    <version>1.0.0</version>
    <description>robot vision perception</description>
    <maintainer email="r1sou@r1sou.com">r1sou</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>

    <depend>laser_geometry</depend>
    <depend>message_filters</depend>
    <depend>rclcpp</depend>
    <depend>rclcpp_components</depend>
    <depend>sensor_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_sensor_msgs</depend>


    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
